cabal-version:      2.4
name:               upenn-course
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sort-care
maintainer:         hji@umass.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable upenn-course
    main-is:          exercise-1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -threaded
    build-depends:    base ^>=4.14.3.0, codeworld-api
    hs-source-dirs:   app
    default-language: Haskell2010
